# subsweep

./: .gitignore  Cargo.toml  README.md  bacon.toml  build.rs  runGdb.sh  runLocal.sh  runMpi.sh  runMpiGdb.sh  test.sh  testMpi.sh  trace.py
.github/workflows/: rust.yml
benches/gravity/: main.rs  parameters.yml
benches/hydrodynamics/: main.rs
benches/periodic_wrap/: main.rs
benches/quadtree/: main.rs
benches/sweep/: main.rs
benches/voronoi/: main.rs
benches/voronoi2d/: main.rs
benches/voronoi3d/: main.rs
crates/derive_custom/: Cargo.toml
crates/derive_custom/src/: lib.rs
crates/derive_traits/: Cargo.toml
crates/derive_traits/src/: lib.rs
crates/macro_utils/: Cargo.toml
crates/macro_utils/src/: lib.rs
derive_custom/: Cargo.toml
derive_custom/src/: lib.rs
derive_named/: Cargo.toml
derive_named/src/: lib.rs
diman/: Cargo.toml
diman/src/: constants.rs  floats.rs  hdf5.rs  lib.rs  mpi.rs  quantities_and_units.rs  quantity.rs  rand.rs  si.rs  unit_system.rs  vectors.rs
diman/src/deserialize/: f64_quantity.rs  mod.rs
diman/src/serde/: f64_quantity.rs  mod.rs  vec_quantity.rs  vector_quantity.rs
diman/src/si/: mod.rs
examples/: domain_decomp.rs  mpi_performance.rs  mpi_test.rs  sweep_1d.rs  voronoi.rs
examples/1d_wave/: main.rs  parameters.yml
examples/2d_blast/: main.rs  parameters.yml
examples/2d_voronoi/: camera.rs  main.rs  parameters.yml  vis.rs
examples/arepo/: main.rs  parameters.yml  unit_reader.rs
examples/arepo_postprocess/: bpass.rs  cosmology.rs  main.rs  parameters.yml  read_grid.rs  sources.rs  unit_reader.rs
examples/arepo_postprocess/read_grid/: id_cache.rs  mod.rs  remote_id_cache.rs
examples/fake_periodic_boundary_conditions/: main.rs  parameters.yml
examples/figure8/: generate_ics.rs  ics.hdf5  main.rs  parameters.yml
examples/gravity_collapse/: main.rs  parameters.yml
examples/kelvin_helmholtz_instability/: main.rs  parameters.yml
examples/rtype_expansion/: main.rs  parameters.yml
examples/sweep/: main.rs  parameters.yml
examples/viscous_hydro/: ics.hdf5  main.rs  parameters.yml
githooks/: pre-commit
macro_utils/src/: lib.rs
named/: Cargo.toml
named/src/: lib.rs
parameters/: parameters.yml
pyVis/: main.py
raxiom_derive_traits/: Cargo.toml
raxiom_derive_traits/src/: lib.rs
scripts/: record_trace.sh  runGdb.sh  runMpi.sh  runMpiBench.sh  test.sh
src/: app_builder.rs  args.rs  command_line_options.rs  components.rs  config.rs  cosmology.rs  density.rs  dimension.rs  emit_build_information.rs  extent.rs  hash_map.rs  initial_conditions.rs  lib.rs  main.rs  mass.rs  mpi_log.rs  mpi_world.rs  named.rs  parameters.rs  particle.rs  peano_hilbert.rs  performance.rs  performance_data.rs  performance_parameters.rs  physics.rs  plugin_utils.rs  position.rs  prelude.rs  pressure.rs  rand.rs  sim_builder.rs  simulation_box.rs  simulation_builder.rs  source_systems.rs  stages.rs  test_examples.rs  test_utils.rs  time_spec.rs  velocity.rs  visualization.rs
src/arepo_postprocess/: bpass.rs  luminosity_table.rs  mod.rs  remap.rs  sources.rs  unit_reader.rs
src/arepo_postprocess/read_grid/: id_cache.rs  mod.rs
src/chemistry/: mod.rs  timescale.rs
src/chemistry/hydrogen_only/: mod.rs
src/communication/: collective_communicator.rs  communicated_option.rs  communicator.rs  data_by_rank.rs  exchange_communicator.rs  from_communicator.rs  identified.rs  local.rs  local_app_building.rs  local_sim_building.rs  mod.rs  mpi_world.rs  plugin.rs  sized_communicator.rs  sync_communicator.rs  verify_tag_type_mapping.rs  world_communicator.rs
src/domain/: decomposition.rs  exchange_data_plugin.rs  extent.rs  extents.rs  key.rs  mod.rs  peano_hilbert.rs  quadtree.rs  remote_quadtree.rs  segment.rs  visualization.rs  work.rs
src/domain/quadtree/: insertion_data.rs
src/gravity/: mass_moments.rs  mod.rs  parameters.rs  plugin.rs  quadtree.rs
src/gravity/tests/: mod.rs  parallel.rs
src/grid/: cartesian.rs  cell.rs  mod.rs
src/hydrodynamics/: hydro_components.rs  mod.rs  parameters.rs  quadtree.rs
src/ics/: density_profile.rs  mod.rs  monte_carlo_sampler.rs  regular.rs  resolution.rs  velocity_profile.rs
src/input/: mod.rs
src/io/: file_distribution.rs  mod.rs  time_series.rs  to_dataset.rs  unit_reader.rs
src/io/input/: attribute.rs  file_distribution.rs  mod.rs  tests.rs
src/memory/: mod.rs
src/output/: attribute.rs  attribute_plugin.rs  dataset_plugin.rs  mod.rs  parameters.rs  timer.rs  to_dataset.rs
src/parameter_plugin/: mod.rs  parameter_file_contents.rs
src/parameters/: mod.rs
src/physics/: gravity.rs  mod.rs  parameters.rs  time.rs
src/plugin_utils/: mod.rs  simulation.rs  tenet_plugin.rs
src/quadtree/: config.rs  index.rs  mod.rs  node_index.rs  radius_search.rs  visualization.rs
src/simulation/: mod.rs  raxiom_plugin.rs  subsweep_plugin.rs  tenet_plugin.rs
src/simulation_plugin/: mod.rs  parameters.rs  tests.rs  time.rs
src/sweep/: active_list.rs  chemistry.rs  chemistry_output.rs  chemistry_solver.rs  communicator.rs  components.rs  count_by_dir.rs  deadlock_detection.rs  direction.rs  mod.rs  parameters.rs  site.rs  task.rs  task_counter.rs  tests.rs  time_series.rs  timestep_level.rs  timestep_state.rs
src/timestep/: active_particles.rs  constant_timestep.rs  mod.rs  parameters.rs  time_bins.rs
src/units/: constants.rs  deserialize.rs  dimension.rs  hdf5.rs  helpers.rs  mod.rs  mpi.rs  quantities_and_units.rs  quantity.rs  specific_impls.rs
src/visualization/: camera.rs  camera_transform.rs  color.rs  drawing.rs  mod.rs  parameters.rs  remote.rs  shape_spawning.rs  show_box_size.rs  show_halo_particles.rs  show_particles.rs
src/voronoi/: cell.rs  constructor.rs  delaunay.rs  face.rs  face_2d.rs  face_3d.rs  indexed_arena.rs  math.rs  math_traits.rs  mod.rs  precision_error.rs  test_utils.rs  tetra.rs  tetra_2d.rs  tetra_3d.rs  triangulation_data.rs  utils.rs  visualizer.rs
tests/data/: critical_matrices_5x5  normal_matrices_5x5
tests/delaunay/: interesting_point_set
tests/input/: panic_on_dimension_mismatch.hdf5  respect_scale_factor.hdf5
(+58 files in other folders)
