[package]
name = "raxiom"
version = "0.1.0"
edition = "2021"
resolver="2"
authors = [
    "Toni Peter <mail@tonipeter.de>",
]

[features]
default = ["3d"]
mpi_test = []
2d = []
3d = []
vis = []

[dependencies]
array-init = "2.1.0"
bevy_ecs = { version = "0.9.1", default-features = false, features = []}
bevy_utils = "0.11.2"
bimap = "0.6.3"
clap = {version = "3.2.25", features = ["derive"]}
derive_more = "0.99.17"
diman = { git = "https://github.com/tehforsch/diman", default-features = false, branch = "fixed-hdf5-version", features = ["mpi", "hdf5", "serde", "glam", "f64", "glam-dvec3", "glam-dvec2"] }
generational-arena = "0.2.9"
glam = "0.24.1"
# Keeping hdf5 pointed at master
hdf5 = { branch = "master", git = "https://github.com/aldanor/hdf5-rust" }
kiddo = "2.1.1"
lazy_static = "1.4.0"
linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }
log = "0.4.20"
mpi = { version = "0.6", default-features = false, features = ["derive"] }
ndarray = "0.15.6"
num = "0.4.1"
once_cell = "1.18.0"
ordered-float = "3.9.1"
rand = "0.8.5"
serde = {version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"

derive_custom = { path = "crates/derive_custom" }
derive_traits = { path = "crates/derive_traits" }
bevy_core = "0.9.1"
bevy_app = "0.9.1"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
macro_utils = { path = "crates/macro_utils" }
generic-tests = "0.1.2"
rand = "0.8.5"

# Optimize dependencies even in a debug build
[profile.dev.package."*"]
opt-level = 3

[profile.release-lto]
inherits = "release"
lto = true

[profile.release]
debug = true

[[example]]
name = "mpi_test"
required-features = ["mpi_test", "3d"]

[[example]]
name = "voronoi"
required-features = ["3d"]

[[example]]
name = "sweep_1d"
required-features = ["3d"]

[[example]]
name = "mpi_performance"

[[example]]
name = "domain_decomp"

[[bench]]
name = "voronoi2d"
harness = false
required-features = ["2d"]

[[bench]]
name = "voronoi3d"
harness = false
required-features = ["3d"]

[[bench]]
name = "quadtree"
harness = false
required-features = ["3d"]

[[bench]]
name = "sweep"
harness = false
required-features = ["3d"]
