[package]
name = "subsweep"
version = "0.2.0"
edition = "2021"
resolver="2"
authors = [
    "Toni Peter <mail@tonipeter.de>",
]
build = "build.rs"

[features]
default = ["3d"]
mpi_test = []
2d = []
3d = []
vis = []
parallel-hdf5 = ["hdf5/mpio"]

[dependencies]
array-init = "2.1.0"
bevy_app = { version = "0.9.1", default-features = false, features = [] }
bevy_core = { version = "0.9.1", default-features = false, features = [] }
bevy_ecs = { version = "0.9.1", default-features = false, features = []}
bevy_utils = { version = "0.9.1", default-features = false, features = [] }
bimap = "0.6.3"
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
clap = {version = "3.2.25", features = ["derive"]}
derive_more = "0.99.17"
diman = { git = "https://github.com/tehforsch/diman", default-features = false, branch = "fixed-hdf5-version-parallel", features = ["mpi", "hdf5", "serde", "glam", "f64", "glam-dvec3", "glam-dvec2"] }
generational-arena = "0.2.9"
glam = "0.24.1"
# Hdf5 dependency is complicated:
# 1. 14.x versions of hdf5 are only supported on master (and not on 0.8.1).
# 2. I have my own custom fork in order to fix panics with H5Pset_evict_on_close
#    in parallel builds of hdf5. See https://github.com/aldanor/hdf5-rust/issues/259
hdf5 = { branch = "master", git = "https://github.com/tehforsch/hdf5-rust" }
kiddo = "2.1.1"
lazy_static = "1.4.0"
linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }
log = "0.4.20"
mpi = { version = "0.6", default-features = false, features = ["derive"] }
ndarray = "0.15.6"
num = "0.4.1"
once_cell = "1.18.0"
ordered-float = "3.9.1"
rand = "0.8.5"
serde = {version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
simplelog = "0.12.1"
time = { version = "0.3.29", default-features = false }

derive_custom = { path = "crates/derive_custom" }
derive_traits = { path = "crates/derive_traits" }

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "cargo", "git", "gitcl"] }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
macro_utils = { path = "crates/macro_utils" }
generic-tests = "0.1.2"

# Optimize dependencies even in a debug build
[profile.dev.package."*"]
opt-level = 3

[profile.release-lto]
inherits = "release"
lto = true

[profile.release]
debug = true

[[example]]
name = "mpi_test"
required-features = ["mpi_test", "3d"]

[[example]]
name = "voronoi"
required-features = ["3d"]

[[example]]
name = "sweep_1d"
required-features = ["3d"]

[[example]]
name = "mpi_performance"

[[example]]
name = "domain_decomp"

[[bench]]
name = "voronoi2d"
harness = false
required-features = ["2d"]

[[bench]]
name = "voronoi3d"
harness = false
required-features = ["3d"]

[[bench]]
name = "sweep"
harness = false
required-features = ["3d"]
